新增iterator和insert和find实现，删减部分无法实现的功能（有bug）。

--- a/ProjectBPTree/ProjectBPTree/ProjectBPTree.vcxproj
+++ b/ProjectBPTree/ProjectBPTree/ProjectBPTree.vcxproj
@@ -77,6 +77,7 @@
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalOptions>/D_CRT_SECURE_NO_WARNINGS %(AdditionalOptions)</AdditionalOptions>
+      <LanguageStandard>stdcpplatest</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -130,6 +131,7 @@
     <ClInclude Include="BTree.hpp" />
     <ClInclude Include="exception.hpp" />
     <ClInclude Include="utility.hpp" />
+    <ClInclude Include="标头.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
