--- a/ProjectBPTree/ProjectBPTree/ProjectBPTree.vcxproj.filters
+++ b/ProjectBPTree/ProjectBPTree/ProjectBPTree.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="utility.hpp">
       <Filter>源文件</Filter>
     </ClInclude>
+    <ClInclude Include="标头.h">
+      <Filter>源文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
