完成insert，正在写erase。

--- a/ProjectBPTree/ProjectBPTree/ProjectBPTree.vcxproj
+++ b/ProjectBPTree/ProjectBPTree/ProjectBPTree.vcxproj
@@ -81,6 +81,7 @@
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
+      <StackReserveSize>10000000</StackReserveSize>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
